# BearLibTerminal

./: CHANGELOG.md  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake
CMakeModules/: CPM.cmake
Include/BearLibTerminal/: BearLibTerminal.hpp
Languages/C#/: BearLibTerminal.cs
Languages/Go/: BearLibTerminal.go
Languages/Python/: setup.py
Output/Linux64/: SampleOmni
Samples/Omni/: CMakeLists.txt  Makefile  SampleOmni.cbp  cmake_install.cmake
Samples/Omni/Source/: AutoGenerated.cpp  BasicOutput.cpp  Common.cpp  Common.hpp  DefaultFont.cpp  DynamicSprites.cpp  ExtendedBasics.cpp  ExtendedInterlayer.cpp  ExtendedSmoothScroll.cpp  FormattedLog.cpp  InputFiltering.cpp  Keyboard.cpp  Layers.cpp  Main.cpp  ManualCellsize.cpp  Mouse.cpp  MultipleFonts.cpp  Pick.cpp  Speed.cpp  Sprites.cpp  TextAlignment.cpp  TextInput.cpp  Tilesets.cpp  WindowResize.cpp
Terminal/: BearLibTerminal.cbp  CMakeLists.txt  Makefile  cmake_install.cmake
Terminal/Dependencies/FreeType/: CMakeLists.txt  Makefile  cmake_install.cmake  freetype2.cbp
Terminal/Dependencies/FreeType/Include/freetype/: freetype.h  ftadvanc.h  ftbbox.h  ftbdf.h  ftbitmap.h  ftbzip2.h  ftcache.h  ftcid.h  fterrdef.h  fterrors.h  ftgasp.h  ftglyph.h  ftgxval.h  ftgzip.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftlist.h  ftlzw.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftpfr.h  ftrender.h  ftsizes.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  fttypes.h  ftwinfnt.h  ftxf86.h  t1tables.h  ttnameid.h  tttables.h
Terminal/Dependencies/FreeType/Include/freetype/config/: ftconfig.h  ftheader.h  ftmodule.h  ftoption.h
Terminal/Dependencies/FreeType/Include/freetype/internal/: autohint.h  ftcalc.h  ftdebug.h  ftdriver.h  ftgloadr.h  ftmemory.h  ftobjs.h  ftpic.h  ftrfork.h  ftserv.h  ftstream.h  fttrace.h  ftvalid.h  psaux.h  pshints.h  sfnt.h  t1types.h  tttypes.h
Terminal/Dependencies/FreeType/Include/freetype/internal/services/: svbdf.h  svcid.h  svgldict.h  svgxval.h  svkern.h  svmm.h  svotval.h  svpfr.h  svpostnm.h  svpscmap.h  svpsinfo.h  svsfnt.h  svttcmap.h  svtteng.h  svttglyf.h  svwinfnt.h
Terminal/Dependencies/FreeType/Source/autofit/: afangles.c  afcjk.c  afcjk.h  afdummy.c  afdummy.h  afglobal.c  afglobal.h  afhints.c  afhints.h  afindic.c  afindic.h  aflatin.c  aflatin.h  aflatin2.c  aflatin2.h  afloader.c  afloader.h  afmodule.c  afmodule.h  afpic.c  afpic.h  aftypes.h  afwarp.c  afwarp.h  autofit.c
Terminal/Dependencies/FreeType/Source/base/: basepic.c  basepic.h  ftadvanc.c  ftapi.c  ftbase.h  ftbbox.c  ftbdf.c  ftbitmap.c  ftcalc.c  ftcid.c  ftdbgmem.c  ftdebug.c  ftfstype.c  ftgasp.c  ftgloadr.c  ftglyph.c  ftgxval.c  ftinit.c  ftlcdfil.c  ftmac.c  ftmm.c  ftobjs.c  ftotval.c  ftoutln.c  ftpatent.c  ftpfr.c  ftpic.c  ftrfork.c  ftsnames.c  ftstream.c  ftstroke.c  ftsynth.c  ftsystem.c  fttrigon.c  fttype1.c  ftutil.c  ftwinfnt.c  ftxf86.c
Terminal/Dependencies/FreeType/Source/raster/: ftmisc.h  ftraster.c  ftraster.h  ftrend1.c  ftrend1.h  rastpic.c  rastpic.h
Terminal/Dependencies/FreeType/Source/sfnt/: sfdriver.c  sfdriver.h  sfnt.c  sfntpic.c  sfntpic.h  sfobjs.c  sfobjs.h  ttbdf.c  ttbdf.h  ttcmap.c  ttcmap.h  ttkern.c  ttkern.h  ttload.c  ttload.h  ttmtx.c  ttmtx.h  ttpost.c  ttpost.h  ttsbit.c  ttsbit.h  ttsbit0.c
Terminal/Dependencies/FreeType/Source/smooth/: ftgrays.c  ftgrays.h  ftsmooth.c  ftsmooth.h  ftspic.c  ftspic.h
Terminal/Dependencies/FreeType/Source/truetype/: truetype.c  ttdriver.c  ttdriver.h  ttgload.c  ttgload.h  ttgxvar.c  ttgxvar.h  ttinterp.c  ttinterp.h  ttobjs.c  ttobjs.h  ttpic.c  ttpic.h  ttpload.c  ttpload.h
Terminal/Dependencies/NanoJPEG/: CMakeLists.txt
Terminal/Dependencies/NanoJPEG/Include/: NanoJPEG.h
Terminal/Dependencies/PicoPNG/: CMakeLists.txt  Makefile  cmake_install.cmake  picopng.cbp
Terminal/Dependencies/PicoPNG/Include/: PicoPNG.h
Terminal/Dependencies/PicoPNG/Source/: PicoPNG.cpp
Terminal/Include/BearLibTerminal/: Atlas.hpp  BOM.hpp  Bitmap.hpp  BitmapTileset.hpp  Builtin.DefaultFont.hpp  Config.hpp  DynamicTileset.hpp  Geometry.hpp  Log.hpp  Options.hpp  Palette.hpp  Platform.hpp  Point.hpp  Rectangle.hpp  Resource.hpp  Size.hpp  Stage.hpp  Terminal.hpp  Texture.hpp  Tileset.hpp  WinApiWindow.hpp  Window.hpp
Terminal/Include/C/: BearLibTerminal.h  BearLibTerminal.hpp
Terminal/Include/C#/: BearLibTerminal.cs
Terminal/Include/Go/: BearLibTerminal.go
Terminal/Include/Pascal/: BearLibTerminal.pas
Terminal/Include/Python/bearlibterminal/: terminal.py
Terminal/Include/Ruby/: BearLibTerminal.rb
Terminal/Source/: Atlas.cpp  BOM.cpp  Base64.cpp  Base64.hpp  BearLibTerminal.cpp  Bitmap.cpp  Bitmap.hpp  BitmapTileset.cpp  Builtin.Codepages.hpp  CocoaWindow.h  CocoaWindow.mm  Color.hpp  Config.cpp  DynamicTileset.cpp  Encoding.cpp  Encoding.hpp  Keystroke.cpp  Keystroke.hpp  LoadBMP.cpp  LoadBitmap.cpp  LoadBitmap.hpp  LoadJPEG.cpp  LoadPNG.cpp  Log.cpp  Log.hpp  Luaopen.cpp  OpenGL.cpp  OpenGL.hpp  OptionGroup.cpp  OptionGroup.hpp  Options.cpp  Palette.cpp  Platform.cpp  Platform.hpp  Resource.cpp  Resource.hpp  SaveBMP.cpp  Stage.cpp  Terminal.cpp  Texture.cpp  (+11 more)
