CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(BearLibTerminal VERSION 2020.04 LANGUAGES CXX )

IF (NOT ((${CMAKE_SYSTEM_NAME} MATCHES "Linux") OR (${CMAKE_SYSTEM_NAME} MATCHES "Windows") OR (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")))
    MESSAGE(FATAL_ERROR "${CMAKE_SYSTEM_NAME} is not supported.")
ENDIF ()

IF (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
    MESSAGE(STATUS "Build type was not specified, switching to 'Release'")
    SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)

    # Set the possible values of build type for cmake-gui
    SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
ENDIF ()

ADD_SUBDIRECTORY(./Terminal)

IF (IS_DIRECTORY "${CMAKE_SOURCE_DIR}/Samples")
    ADD_SUBDIRECTORY(./Samples/Omni)
ENDIF ()