CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(PicoPNG VERSION 1.0.0 LANGUAGES CXX)

INCLUDE_DIRECTORIES(./Include)

IF (UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ENDIF ()

ADD_LIBRARY(PicoPNG STATIC Source/PicoPNG.cpp)

# Support to compiler on mode C++ 17 standard.
TARGET_COMPILE_FEATURES(PicoPNG PRIVATE cxx_std_17)