CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(PicoPNG VERSION 1.0.0 LANGUAGES CXX)

ADD_LIBRARY(PicoPNG STATIC Source/PicoPNG.cpp)
# Support to compiler on mode C++ 17 standard.
SET_TARGET_PROPERTIES(PicoPNG PROPERTIES CXX_STANDARD 17)
TARGET_INCLUDE_DIRECTORIES(PicoPNG PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include/>
        $<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/Include/>)